add: Purchase Satatus is added in the summary component

--- a/src/assets/styles/Summary.css
+++ b/src/assets/styles/Summary.css
@@ -13,7 +13,7 @@
     align-items: flex-start;
 }
 
-/***** Purchase confirmation *****/
+/***** Purchase Satatus *****/
 .sumary .purchase-status {
     display: flex;
     justify-content: center;
