--- a/src/assets/styles/Pay.css
+++ b/src/assets/styles/Pay.css
@@ -1,22 +1,29 @@
-.product-pay .button-back {
-    background-color: var(--black);
+.product-pay .button-reverse {
     cursor: pointer;
     border: none;
-    color: var(--white);
     border-radius: 5rem;
-    width: 15rem;
+    min-width: 15rem;
     height: 3.5rem;
     font-size: 2rem;
     margin-bottom: 5rem;
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+    justify-content: center;
+    padding: 1.5rem;
+    color: var(--white);
+    background-color: var(--black);
+
 }
 
-.product-pay .button-back:hover,
-.product-pay .button-back:active {
+
+.product-pay .button-reverse:hover,
+.product-pay .button-reverse:active {
     background-color: rgb(45, 43, 43);
     font-size: 2.1rem;
 }
 
-.product-pay .button-back:active {
+.product-pay .button-reverse:active {
     position: relative;
     top: -1px;
 }
